Update the talk

--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -83,6 +83,7 @@
         </section>
 
         <section>
+            <img src="img/slido.png" width="50%"/>
         </section>
 
         <section>
