--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -170,7 +170,7 @@
             <pre><code data-trim="">
                 User user = new User(name, surname);
             </code></pre>
-            <h3>Error space reduced drastically</h3>
+            <h3>Error space reduced</h3>
 
         </section>
 
