Move modularity slides

--- a/talks/modularity/index.html
+++ b/talks/modularity/index.html
@@ -117,7 +117,7 @@
 
         <section>
             <h2>Benefits of Modularization</h2>
-            <li>String Encapsulation (hidden implementation details)</li>
+            <li>Strong Encapsulation (hidden implementation details)</li>
             <li>Clear Interfaces/APIs</li>
             <li>Explicit Dependencies</li>
             <li>Divide and Conquer</li>
