--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -112,6 +112,7 @@
     <img src="img/85.png" width="800"/>
     <img src="img/86.png" width="800"/>
     <img src="img/87.png" width="800"/>
+    <img src="img/88.png" width="800"/>
 </div>
 
 </body>
