Back to Basics: Caching

--- a/talks/btb-caching/index.html
+++ b/talks/btb-caching/index.html
@@ -73,6 +73,12 @@
         </section>
 
         <section>
+            <blockquote>
+                In computing, a cache (/kæʃ/ (About this soundlisten) kash,[1] or /ˈkeɪʃ/ kaysh in AuE[2]) is a hardware or software component that stores data so that future requests for that data can be served faster; the data stored in a cache might be the result of an earlier computation or a copy of data stored elsewhere.
+            </blockquote>
+        </section>
+
+        <section>
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
             <h2>Senior Software Engineer @ <a href="http://hazelcast.com/">Hazelcast</a></h2>
             <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
