Back to Basics: Caching

--- a/talks/btb-caching/index.html
+++ b/talks/btb-caching/index.html
@@ -61,9 +61,9 @@
 
         <section>
             <h1>Back to Basics: Caching</h1>
-            <br>
-            <br>
-            <br>
+            <br><br>
+            <img src="img/qrcode.png"/>
+            <br><br>
             <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
 
