--- a/talks/btb-caching/index.html
+++ b/talks/btb-caching/index.html
@@ -74,7 +74,8 @@
 
         <section>
             <blockquote>
-                In computing, a cache (/kæʃ/ (About this soundlisten) kash,[1] or /ˈkeɪʃ/ kaysh in AuE[2]) is a hardware or software component that stores data so that future requests for that data can be served faster; the data stored in a cache might be the result of an earlier computation or a copy of data stored elsewhere.
+                In computing, a cache (/kæʃ/ kash, or /ˈkeɪʃ/ kaysh) is a hardware or software component that stores data so that future requests for that data can be served faster.
+                The data stored in a cache might be the result of an earlier computation or a copy of data stored elsewhere.
             </blockquote>
         </section>
 
