--- a/talks/index.html
+++ b/talks/index.html
@@ -43,6 +43,14 @@
         <td style="background: #ffffff" colspan="5" align="center">2020</td>
     </tr>
         
+    <tr>
+        <td>81.</td>
+        <td data-location="39.927860, -105.118078" data-place="Omni Interlocken Hotel">Dev.next 2020</td>
+        <td><a href="https://www.devdotnext.com/">Fantastic Frameworks and How to Avoid Them</a></td>
+        <td>24.03.2020</td>
+        <td>Denver/USA</td>
+    </tr>
+        
     <tr><td style="background: #ffffff" colspan="5" align="center">PAST</td></tr>
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2019</td>
