--- a/talks/fantastic-frameworks/index.html
+++ b/talks/fantastic-frameworks/index.html
@@ -63,13 +63,7 @@
             <h1>Fantastic Frameworks</h1>
             <h3>...and How to Avoid Them</h3>
             <br>
-            <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
-            <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
-        </section>
-
-        <section>
-            <h1>Fantastic Frameworks</h1>
-            <h3>...and How/Why/If to Avoid Them</h3>
+            <br>
             <br>
             <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
@@ -77,8 +71,11 @@
 
         <section>
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
-            <h2>Independent Consultant</h2>
-	        <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
+            <h2>Senior Software Engineer @ <a href="http://hazelcast.com/">Hazelcast</a></h2>
+            <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
+            <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
+            <br>
+
         </section>
 
         <section></section>
