--- a/talks/btb-caching/index.html
+++ b/talks/btb-caching/index.html
@@ -87,6 +87,23 @@
         </section>
 
         <section>
+            <h3>TODO</h3>
+            <li>in-process-caches (ehcache, guava, caffeine)</li>
+            <li>distributed caches (hazelcast)</li>
+            <li>near-caches</li>
+            <li>cache params, characteristics, metrics</li>
+            <li>write-through vs write-back</li>
+            <li>write-allocate vs no-write-allocate</li>
+            <li>look-a-side caching</li>
+            <li>policies: TLRU, LFRU, MRU, FIFO, LIFO, LRU, PLRU, RR, SLRU, LFUDA, LIRS, ARC, CAR, MQ</li>
+            <li>database problems</li>
+            <li>cache invalidation</li>
+            <li>common problems</li>
+            <li>simpliest cache ever</li>
+            <li>caches are everywhere (just like qs)</li>
+        </section>
+
+        <section>
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
             <h2>Senior Software Engineer @ <a href="http://hazelcast.com/">Hazelcast</a></h2>
             <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
