--- a/talks/index.html
+++ b/talks/index.html
@@ -41,6 +41,14 @@
     </tr>
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2020</td>
+    </tr> 
+        
+    <tr>
+        <td>83.</td>
+        <td data-location="13.021415, 77.567144" data-place="IISc">GIDS India 2020</td>
+        <td><a href="https://developersummit.com/india/index.html">Fantastic Frameworks and How to Avoid Them</a></td>
+        <td>20.04.2020</td>
+        <td>Bangalore/India</td>
     </tr>
         
     <tr>
