Add DevTalks Romania 2020

--- a/talks/index.html
+++ b/talks/index.html
@@ -41,7 +41,15 @@
     </tr>
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2020</td>
-    </tr> 
+    </tr>
+
+    <tr>
+        <td>84.</td>
+        <td data-location="44.476128, 26.065163" data-place="Romexpo">DevTalks Romania 2020</td>
+        <td><a href="https://www.devtalks.ro/bucharest/">Fantastic Frameworks and How to Avoid Them</a></td>
+        <td>10.06.2020</td>
+        <td>Bucharest/Romania</td>
+    </tr>
         
     <tr>
         <td>83.</td>
