--- a/talks/index.html
+++ b/talks/index.html
@@ -70,10 +70,11 @@
     <tr>
         <td>81.</td>
         <td data-location="50.028506, 22.001869" data-place="Apart Hotel 12">RzeszówJUG</td>
-        <td><a href="https://www.meetup.com/Rzeszow-Java-User-Group/">???</a></td>
+        <td><a href="https://www.meetup.com/Rzeszow-Java-User-Group/">Fantastic Frameworks and How to Avoid Them</a></td>
         <td>12.02.2020</td>
         <td>Rzeszów/Poland</td>
     </tr>
+
     <tr><td style="background: #ffffff" colspan="5" align="center">PAST</td></tr>
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2019</td>
