--- a/talks/btb-caching/index.html
+++ b/talks/btb-caching/index.html
@@ -81,6 +81,11 @@
         </section>
 
         <section>
+            <img src="img/caches.png" width="40%"/>
+            <br>
+            <small><a href="https://twitter.com/hikari_no_yume/status/1220459787470757895">https://twitter.com/hikari_no_yume/status/1220459787470757895</a> </small>
+        </section>
+        <section>
             <blockquote>
                 In computing, a cache (/kæʃ/ kash, or /ˈkeɪʃ/ kaysh) is a hardware or software component that stores data so that future requests for that data can be served faster.
             </blockquote>
