--- a/talks/fantastic-frameworks/index.html
+++ b/talks/fantastic-frameworks/index.html
@@ -79,6 +79,15 @@
         </section>
 
         <section></section>
+        <section>
+            <img src="img/hz.png" width="20%"/><br>
+
+            The Hazelcast IMDG is an operational in-memory computing platform that manages data and distributes
+            processing using memory and parallel execution for breakthrough application speed and scale.
+            <br><br>
+            Hazelcast IMDG is easy to work with and brings a highly resilient
+            and elastic memory resource to all your applications.
+        </section>
 
         <section>
             <h2>Developers Smalltalk?</h2>
