--- a/talks/index.html
+++ b/talks/index.html
@@ -105,7 +105,7 @@
     </tr>
     <tr>
         <td>80.</td>
-        <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">IT Non Stop J-Santa 2019</td>
+        <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">J-Santa 2019</td>
         <td><a href="https://j-santa.pl">Purely Dysfunctional Data Structures</a></td>
         <td>30.11.2019</td>
         <td>Lublin/Poland</td>
@@ -272,14 +272,14 @@
     </tr>
     <tr>
         <td>59.</td>
-        <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">IT Non Stop J-Santa 2018</td>
+        <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">Stop J-Santa 2018</td>
         <td><a href="https://j-santa.pl">Discussion Panel: Architecture vs Technology</a></td>
         <td>08.12.2018</td>
         <td>Lublin/Poland</td>
     </tr>
     <tr>
         <td>58.</td>
-        <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">IT Non Stop J-Santa 2018</td>
+        <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">Stop J-Santa 2018</td>
         <td><a href="https://j-santa.pl">The Dark Side of Java 8</a></td>
         <td>08.12.2018</td>
         <td>Lublin/Poland</td>
