--- a/talks/fantastic-frameworks/index.html
+++ b/talks/fantastic-frameworks/index.html
@@ -413,7 +413,7 @@
             <h2>ORM as plugin</h2>
 
             <pre><code data-trim="" style="font-size: 0.8em;line-height: 0.9; max-height: 90%">
-                package com.piwowarek.domain;
+                package com.pivovarit.domain;
 
                 public class User {
                     private final Long id;
@@ -422,7 +422,7 @@
             </code></pre>
 
             <pre><code data-trim="" style="font-size: 0.8em;line-height: 0.9; max-height: 90%">
-                package com.piwowarek.persistence;
+                package com.pivovarit.persistence;
 
                 import javax.persistence.Column;
                 import javax.persistence.Entity;
