--- a/talks/hall-of-fame/index.html
+++ b/talks/hall-of-fame/index.html
@@ -113,6 +113,9 @@
     <img src="img/86.png" width="800"/>
     <img src="img/87.png" width="800"/>
     <img src="img/88.png" width="800"/>
+    <img src="img/89.png" width="800"/>
+    <img src="img/90.jpeg" width="800"/>
+    <img src="img/91.png" width="800"/>
 </div>
 
 </body>
