--- a/talks/index.html
+++ b/talks/index.html
@@ -42,6 +42,14 @@
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2020</td>
     </tr>
+        
+    <tr>
+        <td>88.</td>
+        <td data-location="41.409505, 2.219069" data-place="CCiB">JBCN 2020</td>
+        <td><a href="https://www.jbcnconf.com/2020/">Purely Dysfunctional Data Structures</a></td>
+        <td>6.07.2020</td>
+        <td>Barcelona/Spain</td>
+    </tr>
 
     <tr>
         <td>87.</td>
