--- a/talks/btb-caching/index.html
+++ b/talks/btb-caching/index.html
@@ -75,7 +75,7 @@
         <section>
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
             <h2>Senior Software Engineer @ <a href="http://hazelcast.com/">Hazelcast</a></h2>
-            <h2>Trainer @ <a href="https://bottega.com.pl">Bottega IT Minds</a></h2>
+
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
             <br>
         </section>
@@ -96,6 +96,8 @@
             <li>in-process-caches (ehcache, guava, caffeine)</li>
             <li>distributed caches (hazelcast)</li>
             <li>near-caches</li>
+            <li>offloading/preloading</li>
+            <li>persistence</li>
             <li>cache params, characteristics, metrics</li>
             <li>write-through vs write-back</li>
             <li>write-allocate vs no-write-allocate</li>
