--- a/talks/btb-caching/index.html
+++ b/talks/btb-caching/index.html
@@ -98,11 +98,12 @@
             <li>near-caches</li>
             <li>offloading/preloading</li>
             <li>persistence</li>
+            <li>jcache</li>
             <li>cache params, characteristics, metrics</li>
             <li>write-through vs write-back</li>
             <li>write-allocate vs no-write-allocate</li>
             <li>look-a-side caching</li>
-            <li>policies: TLRU, LFRU, MRU, FIFO, LIFO, LRU, PLRU, RR, SLRU, LFUDA, LIRS, ARC, CAR, MQ</li>
+            <li>policies: TLRU, LFRU, MRU, FIFO, LIFO, LRU, PLRU, RR, SLRU, LFUDA, LIRS, ARC, CAR, MQ, time-based</li>
             <li>database problems</li>
             <li>cache invalidation</li>
             <li>common problems</li>
